fixed contact.php footer spacing

--- a/_css/styles.css
+++ b/_css/styles.css
@@ -116,6 +116,9 @@ a { color: #222; }
 	text-decoration: none;
 	font-size: 1em;
 }
+.extraspace {
+	margin-bottom: 471px;
+}
 
 h1, h2, h3, h4, h5 {
 	font-weight: 300;
